text shadow fixes to make it blurred

--- a/css/2016.css
+++ b/css/2016.css
@@ -4,7 +4,7 @@ body {
     font-size: 19px;
     background: url('background-image.jpg') no-repeat center center fixed;
     background-size: cover;
-    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+    text-shadow: 0px 0px 2px #000;
 }
 
 a, a:hover {
